Fix: Registrar cliente
Se arregló el formulario de crear cuenta
